--- a/src/app/pages/product/product.page.html
+++ b/src/app/pages/product/product.page.html
@@ -1,9 +1,24 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>product</ion-title>
+    <ion-title>Products</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content padding>
-
+    <ion-list>
+        <ion-grid fixed>
+            <ion-row align-items: stretch>
+                <ion-col size="12" size-md="6" *ngFor="let product of products">
+                    <ion-card>
+                        <ion-item detail="false" lines="none" [href]="'tabs-page/tabs/(product:product-subcatalog/'+ product.name">   <!-- 1.href不对   2.为啥有[] -->
+                            <ion-avatar slot="start">
+                                <img [src]="product.profilePic" alt="product profile pic">
+                            </ion-avatar>
+                            <ion-label>{{product.name}}</ion-label>
+                        </ion-item>
+                    </ion-card>
+                </ion-col>
+            </ion-row>
+        </ion-grid>
+    </ion-list>
 </ion-content>
